@@ -30,14 +30,21 @@ import org.gudy.azureus2.plugins.messaging.MessageStreamDecoder;
 import org.gudy.azureus2.plugins.messaging.MessageStreamEncoder;
 import org.gudy.azureus2.plugins.network.Connection;
 import org.gudy.azureus2.plugins.network.ConnectionManager;
+import org.gudy.azureus2.plugins.network.Transport;
 import org.gudy.azureus2.plugins.network.TransportCipher;
+import org.gudy.azureus2.plugins.network.TransportException;
+import org.gudy.azureus2.plugins.network.TransportFilter;
 import org.gudy.azureus2.pluginsimpl.local.messaging.MessageStreamDecoderAdapter;
 import org.gudy.azureus2.pluginsimpl.local.messaging.MessageStreamEncoderAdapter;
 
 import com.aelitis.azureus.core.AzureusCore;
 import com.aelitis.azureus.core.networkmanager.ConnectionEndpoint;
 import com.aelitis.azureus.core.networkmanager.NetworkManager;
+import com.aelitis.azureus.core.networkmanager.impl.TransportHelperFilterStreamCipher;
 import com.aelitis.azureus.core.networkmanager.impl.tcp.ProtocolEndpointTCP;
+import com.aelitis.azureus.core.networkmanager.impl.tcp.TCPTransportHelper;
+
+import com.aelitis.azureus.core.networkmanager.impl.tcp.TCPTransportImpl;
 
 
 /**
@@ -90,9 +97,25 @@ public class ConnectionManagerImpl implements ConnectionManager {
 	  return( azureus_core.getGlobalManager().getNATStatus());
   }
   
-  public TransportCipher createTransportCipher(String algorithm, int mode, SecretKeySpec key_spec, AlgorithmParameterSpec params) throws Exception {
-	  com.aelitis.azureus.core.networkmanager.impl.TransportCipher cipher = new com.aelitis.azureus.core.networkmanager.impl.TransportCipher(algorithm, mode, key_spec, params);
-	  return new TransportCipherImpl(cipher);
+  public TransportCipher createTransportCipher(String algorithm, int mode, SecretKeySpec key_spec, AlgorithmParameterSpec params) throws TransportException {
+	  try {
+		  com.aelitis.azureus.core.networkmanager.impl.TransportCipher cipher = new com.aelitis.azureus.core.networkmanager.impl.TransportCipher(algorithm, mode, key_spec, params);
+		  return new TransportCipherImpl(cipher);
+	  }
+	  catch (Exception e) {
+		  throw new TransportException(e);
+	  }
+  }
+  
+  public TransportFilter createTransportFilter(Transport transport, TransportCipher read_cipher, TransportCipher write_cipher) throws TransportException {
+	  if (!(((TransportImpl)transport).core_transport instanceof TCPTransportImpl)) {
+		  throw new TransportException("transport type not supported - " + ((TransportImpl)transport).core_transport);
+	  }
+	  
+	  TCPTransportImpl core_transport = (TCPTransportImpl)((TransportImpl)transport).core_transport;
+	  TCPTransportHelper helper = new TCPTransportHelper(core_transport.getSocketChannel());
+	  TransportHelperFilterStreamCipher core_filter = new TransportHelperFilterStreamCipher(helper, ((TransportCipherImpl)read_cipher).cipher, ((TransportCipherImpl)write_cipher).cipher);
+	  return new TransportFilterImpl(core_filter);
   }
   
 }
